tests/baselines/reference/typingsSuggestion2.errors.txt
tests/cases/conformance/typings/a.ts(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== tests/cases/conformance/typings/tsconfig.json (0 errors) ====
    { "compilerOptions": {} }
    
==== tests/cases/conformance/typings/a.ts (1 errors) ====
    module.exports = 1;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    